--- a/checkout.html
+++ b/checkout.html
@@ -44,7 +44,7 @@
 
                         <div class="d-lg-flex justify-content-between">
                             <h5>Contact Information</h5>
-                            <p>Already have an account?<a href="#">Log in</a></p>
+                            <p>Already have an account?<a href="/login.html">Log in</a></p>
                         </div>
                         <!-- <label for="validationCustom01" class="form-label">First name</label> -->
                         <input type="email" class="form-control" id="validationCustom01" placeholder="Email" required>
