--- a/index.html
+++ b/index.html
@@ -550,9 +550,9 @@
                     <h3 class="h4">Contact us</h3>
                     <div>
                         <p>The Tassle Life</p>
-                        <p>1076, 1st Floor, Heera Panna Mall, Powai, Mumbai 400076</p>
-                        <p>info@thetasslelife.com</p>
-                        <p>+91-9167286642</p>
+                        <p>1076, California</p>
+                        <p>info@example.com</p>
+                        <p>+91-0000000000</p>
                     </div>
                 </section>
 
@@ -580,8 +580,8 @@
             </div>
 
             <div class="container-fluid p-0">
-                <p class="text-center text-white">Copyright © 2022, <a href="#" class="text-white" title=""
-                        target="_blank">The Tassle Life </a>.
+                <p class="text-center text-white">Made With  &hearts;  By <a href="https://github.com/AbhishekSinghkirola/TessleLifeClone" class="text-white" title=""
+                        target="_blank">Abhishek Singh Kirola </a>.
                 </p>
             </div>
 
@@ -659,6 +659,7 @@
         </div>
 
     </footer>
+
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
