--- a/login.html
+++ b/login.html
@@ -192,9 +192,9 @@
                     <h3 class="h4">Contact us</h3>
                     <div>
                         <p>The Tassle Life</p>
-                        <p>1076, 1st Floor, Heera Panna Mall, Powai, Mumbai 400076</p>
-                        <p>info@thetasslelife.com</p>
-                        <p>+91-9167286642</p>
+                        <p>1076, California</p>
+                        <p>info@example.com</p>
+                        <p>+91-0000000000</p>
                     </div>
                 </section>
 
@@ -222,8 +222,8 @@
             </div>
 
             <div class="container-fluid p-0">
-                <p class="text-center text-white">Copyright © 2022, <a href="#" class="text-white" title=""
-                        target="_blank">The Tassle Life </a>.
+                <p class="text-center text-white">Made With  &hearts;  By <a href="https://github.com/AbhishekSinghkirola/TessleLifeClone" class="text-white" title=""
+                        target="_blank">Abhishek Singh Kirola </a>.
                 </p>
             </div>
 
