--- a/add-cart.html
+++ b/add-cart.html
@@ -27,7 +27,7 @@
         <nav class="col-12 col-md-9 m-auto navbar navbar-expand-lg navbar-light bg-white">
 
             <div class="container-fluid ">
-                <a class="navbar-brand logo__image-wrapper" href="/"><img src="Images/logo/Logo.jpg"
+                <a class="navbar-brand logo__image-wrapper" href="index.html"><img src="Images/logo/Logo.jpg"
                         alt="The Tassle Life " /></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -37,11 +37,11 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 m-auto site-nav">
                         <li class="nav-item fw-bold ">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link dropdown-toggle" href="/">Home Decor</a>
+                            <a class="nav-link dropdown-toggle" href="#">Home Decor</a>
                         </li>
 
                         </li>
@@ -256,9 +256,9 @@
                     Use code TTL20 at the time of checkout to get 20% OFF
                 </div>
                 <div>
-                    <a href="/" class="btn btn-outline-dark me-2" style="padding: 8px 10px;">Continue Shopping</a>
-                    <a href="/add-cart.html" class="btn btn-outline-dark me-2" style="padding: 8px 10px;">Update Cart</a>
-                    <a href="/checkout.html" class="btn btn-dark text-white" style="padding: 8px 10px;">Checkout</a>
+                    <a href="index.html" class="btn btn-outline-dark me-2" style="padding: 8px 10px;">Continue Shopping</a>
+                    <a href="add-cart.html" class="btn btn-outline-dark me-2" style="padding: 8px 10px;">Update Cart</a>
+                    <a href="checkout.html" class="btn btn-dark text-white" style="padding: 8px 10px;">Checkout</a>
                 </div>
             </div>
         </div>
