Update single-product page

--- a/single-product.html
+++ b/single-product.html
@@ -131,9 +131,9 @@
             <div class="row g-0">
                 <div class="col-lg-5 col-12">
                     <div class="tab-content" id="pills-tabContent">
-                        <div class="tab-pane fade show active" id="image1" role="tabpanel" aria-labelledby="pills-home-tab"> <img src="images/single-product/1.webp" alt="" class="w-100"></div>
+                        <div class="tab-pane fade show active" id="image1" role="tabpanel" aria-labelledby="pills-home-tab"> <img src="Images/single-product/1.webp" alt="" class="w-100"></div>
                         <!-- <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab"> <img src="images/single-product/1.1.webp" alt="" class="w-100"></div> -->
-                        <div class="tab-pane fade" id="image2" role="tabpanel" aria-labelledby="pills-contact-tab"> <img src="images/single-product/1.2.webp" alt="" class="w-100"></div>
+                        <div class="tab-pane fade" id="image2" role="tabpanel" aria-labelledby="pills-contact-tab"> <img src="Images/single-product/1.2.webp" alt="" class="w-100"></div>
                       </div>
                    <!-- <div>
                     <img src="images/single-product/1.webp" alt="" class="img-fluid">
@@ -142,10 +142,10 @@
                     <div class="mt-4 d-flex"style="gap: 30px;" >
                         <ul class="nav mb-3" id="pills-tab" role="tablist">
                             <li class="nav-item" role="presentation">
-                              <button class="nav-link active p-0 border-0" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#image1" type="button" role="tab" aria-controls="pills-home" aria-selected="true" style="width: 134px; height: 178px;"><img class="img-fluid" src="images/single-product/1.1.webp" alt=""></button>
+                              <button class="nav-link active p-0 border-0" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#image1" type="button" role="tab" aria-controls="pills-home" aria-selected="true" style="width: 134px; height: 178px;"><img class="img-fluid" src="Images/single-product/1.1.webp" alt=""></button>
                             </li>
                             <li class="nav-item" role="presentation">
-                              <button class="nav-link p-0 border-0 ms-3" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#image2" type="button" role="tab" aria-controls="pills-profile" aria-selected="false" style="width: 134px; height: 178px;"><img class="img-fluid" src="images/single-product/1.2.webp" alt=""></button>
+                              <button class="nav-link p-0 border-0 ms-3" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#image2" type="button" role="tab" aria-controls="pills-profile" aria-selected="false" style="width: 134px; height: 178px;"><img class="img-fluid" src="Images/single-product/1.2.webp" alt=""></button>
                             </li>
                           </ul>
                         <!-- <div style="width: 134px; height: 178px;"><a href="#"><img class="img-fluid" src="images/single-product/1.1.webp" alt=""></a></div>
@@ -221,14 +221,14 @@
                     <div class="modal-body">
                         <div class="d-flex justify-content-between">
                             <p class="text-secondary">Choose Your Location</p>
-                            <div class="text-secondary fw-bold"><img src="images/flags/pin.png" alt="" width="20px">India</div>
+                            <div class="text-secondary fw-bold"><img src="Images/flags/pin.png" alt="" width="20px">India</div>
                         </div>
                       <form action="">
                         <select name="" id="" class="form-select">
-                            <option value="India"><img src="images/flags/india.png" alt="">India</option>
-                            <option value="India"><img src="images/flags/india.png" alt="">India</option>
-                            <option value="India"><img src="images/flags/india.png" alt="">India</option>
-                            <option value="India"><img src="images/flags/india.png" alt="">India</option>
+                            <option value="India"><img src="Images/flags/india.png" alt="">India</option>
+                            <option value="India"><img src="Images/flags/india.png" alt="">India</option>
+                            <option value="India"><img src="Images/flags/india.png" alt="">India</option>
+                            <option value="India"><img src="Images/flags/india.png" alt="">India</option>
                         </select>
                       </form>
                     </div>
