update link path

--- a/single-product.html
+++ b/single-product.html
@@ -193,7 +193,7 @@
                         </form>
 
                         <div class="mt-5 pt-5">
-                            <p>🚚 Free Shipping in <img src="images/flags/india.png" alt="" width="14px" height="12px">
+                            <p>🚚 Free Shipping in <img src="Images/flags/india.png" alt="" width="14px" height="12px">
                                 <strong data-bs-toggle="modal" data-bs-target="#exampleModal" style="cursor:pointer;">India
                                 <span class="arrow-down"
                                     style="margin-right: 6px;margin-left:3px;border-left: 2px solid #858585;border-bottom: 2px solid #858585;height: 10px;width: 10px;transform: translate(2px, -2px) rotate(-45deg); -webkit-transform: translate(2px, -2px) rotate(-45deg);border-right: 2px solid transparent;border-top: 2px solid transparent;display: inline-block;-moz-transform: translate(2px, -2px) rotate(-45deg);-ms-transform: translate(2px, -2px) rotate(-45deg);-o-transform: translate(2px, -2px) rotate(-45deg);"></span>
