Update Galley Hover

--- a/index.html
+++ b/index.html
@@ -429,51 +429,93 @@
 
         <div class="row gx-1 gx-lg-0 gy-1 gy-lg-4">
 
-            <div class="col-md-3 col-lg-3 col-3 position-relative" id="gallery-wrapper">
+            <div class="col-md-3 col-lg-3 col-3 position-relative gallery-wrapper" >
                 <a href="#">
                     <div class="text-center"><img src="Images/gallery/gallery1.jpg" alt="" class="w-100 w-md-75"></div>
                 </a>
-                <div id="overlay" class="position-absolute top-0 start-0 h-100 w-100 d-none"
+                <div  class="position-absolute top-0 start-0 h-100 w-100 d-none overlay"
                     style="background-color: rgba(0,0,0,0.4);">
                     <div class="d-flex justify-content-center align-items-center h-100" style="cursor: pointer;">
                         <img src="Images/icon/instagram-icon.svg" alt="" width="40px" height="40px">
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 col-lg-3 col-3">
+            <div class="col-md-3 col-lg-3 col-3 gallery-wrapper  position-relative">
                 <a href="#">
                     <div class="text-center"><img src="Images/gallery/gallery2.jpg" alt="" class="w-100"></div>
                 </a>
+                <div class="position-absolute top-0 start-0 h-100 w-100 d-none overlay"
+                    style="background-color: rgba(0,0,0,0.4);">
+                    <div class="d-flex justify-content-center align-items-center h-100" style="cursor: pointer;">
+                        <img src="Images/icon/instagram-icon.svg" alt="" width="40px" height="40px">
+                    </div>
+                </div>
             </div>
-            <div class="col-md-3 col-lg-3 col-3">
+            <div class="col-md-3 col-lg-3 col-3  gallery-wrapper  position-relative">
                 <a href="#">
                     <div class="text-center"><img src="Images/gallery/gallery3.jpg" alt="" class="w-100"></div>
                 </a>
+                <div class="position-absolute top-0 start-0 h-100 w-100 d-none overlay"
+                    style="background-color: rgba(0,0,0,0.4);">
+                    <div class="d-flex justify-content-center align-items-center h-100" style="cursor: pointer;">
+                        <img src="Images/icon/instagram-icon.svg" alt="" width="40px" height="40px">
+                    </div>
+                </div>
             </div>
-            <div class="col-md-3 col-lg-3 col-3">
+            <div class="col-md-3 col-lg-3 col-3  gallery-wrapper  position-relative">
                 <a href="#">
                     <div class="text-center"><img src="Images/gallery/gallery4.jpg" alt="" class="w-100"></div>
                 </a>
+                <div class="position-absolute top-0 start-0 h-100 w-100 d-none overlay"
+                    style="background-color: rgba(0,0,0,0.4);">
+                    <div class="d-flex justify-content-center align-items-center h-100" style="cursor: pointer;">
+                        <img src="Images/icon/instagram-icon.svg" alt="" width="40px" height="40px">
+                    </div>
+                </div>
             </div>
-            <div class="col-md-3 col-lg-3 col-3">
+            <div class="col-md-3 col-lg-3 col-3  gallery-wrapper  position-relative">
                 <a href="#">
                     <div class="text-center"><img src="Images/gallery/gallery5.jpg" alt="" class="w-100"></div>
                 </a>
+                <div class="position-absolute top-0 start-0 h-100 w-100 d-none overlay"
+                    style="background-color: rgba(0,0,0,0.4);">
+                    <div class="d-flex justify-content-center align-items-center h-100" style="cursor: pointer;">
+                        <img src="Images/icon/instagram-icon.svg" alt="" width="40px" height="40px">
+                    </div>
+                </div>
             </div>
-            <div class="col-md-3 col-lg-3 col-3">
+            <div class="col-md-3 col-lg-3 col-3  gallery-wrapper  position-relative">
                 <a href="#">
                     <div class="text-center"><img src="Images/gallery/gallery6.jpg" alt="" class="w-100"></div>
                 </a>
+                <div class="position-absolute top-0 start-0 h-100 w-100 d-none overlay"
+                    style="background-color: rgba(0,0,0,0.4);">
+                    <div class="d-flex justify-content-center align-items-center h-100" style="cursor: pointer;">
+                        <img src="Images/icon/instagram-icon.svg" alt="" width="40px" height="40px">
+                    </div>
+                </div>
             </div>
-            <div class="col-md-3 col-lg-3 col-3">
+            <div class="col-md-3 col-lg-3 col-3  gallery-wrapper  position-relative">
                 <a href="#">
                     <div class="text-center"><img src="Images/gallery/gallery7.jpg" alt="" class="w-100"></div>
                 </a>
+                <div class="position-absolute top-0 start-0 h-100 w-100 d-none overlay"
+                    style="background-color: rgba(0,0,0,0.4);">
+                    <div class="d-flex justify-content-center align-items-center h-100" style="cursor: pointer;">
+                        <img src="Images/icon/instagram-icon.svg" alt="" width="40px" height="40px">
+                    </div>
+                </div>
             </div>
-            <div class="col-md-3 col-lg-3 col-3">
+            <div class="col-md-3 col-lg-3 col-3 gallery-wrapper  position-relative">
                 <a href="#">
                     <div class="text-center"><img src="Images/gallery/gallery8.jpg" alt="" class="w-100"></div>
                 </a>
+                <div class="position-absolute top-0 start-0 h-100 w-100 d-none overlay"
+                    style="background-color: rgba(0,0,0,0.4);">
+                    <div class="d-flex justify-content-center align-items-center h-100" style="cursor: pointer;">
+                        <img src="Images/icon/instagram-icon.svg" alt="" width="40px" height="40px">
+                    </div>
+                </div>
             </div>
         </div>
         <!-- <div class="row  gx-5 mt-5">
